--- a/styled.css
+++ b/styled.css
@@ -4,6 +4,9 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif; /* Padrão do projeto */
+  p{ 
+    color: #333;
+  }
 }
 
 body {
